--- a/css/new-style.css
+++ b/css/new-style.css
@@ -82,9 +82,16 @@
         }
 
         .line {
-            height: 10px;
-            width: 150px;
+            height: 8px;
+            width: 0px;
             background-color: #72C9BD;
+
+            -webkit-transition: width 2s; /* For Safari 3.1 to 6.0 */
+            transition: width 2s;
+        }
+
+        .toggle-build:hover .line {
+            width:150px;
         }
 
         .foto-1,
